--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Portfolio of Kirby Lopez"
-    />
+    <meta name="description" content="Portfolio of Kirby Lopez" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -23,7 +20,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>KLCodes</title>
+    <title>
+      klcodes | Full Stack Developer - Transform your ideas into applications
+    </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
